# Tor.Web.Capture

./: .gitignore  Cargo.toml  Makefile  README.md
config/: default.toml
crates/tor-capture-browser/: Cargo.toml
crates/tor-capture-browser/src/: capture_engine.rs  chrome.rs  lib.rs  link_extractor.rs  screenshot.rs  spider_engine.rs
crates/tor-capture-core/: Cargo.toml
crates/tor-capture-core/src/: config.rs  error.rs  lib.rs  models.rs  spider.rs
crates/tor-capture-gdrive/: Cargo.toml
crates/tor-capture-gdrive/src/: folder.rs  lib.rs  upload.rs
crates/tor-capture-gdrive/src/auth/: mod.rs  oauth2.rs  service_account.rs
crates/tor-capture-network/: Cargo.toml
crates/tor-capture-network/src/: http_client.rs  isolation.rs  lib.rs  tor_client.rs
crates/tor-capture-scheduler/: Cargo.toml
crates/tor-capture-scheduler/src/: executor.rs  job.rs  lib.rs
crates/tor-capture-storage/: Cargo.toml
crates/tor-capture-storage/src/: lib.rs  pool.rs
crates/tor-capture-storage/src/migrations/: mod.rs  v001_initial.sql
crates/tor-capture-storage/src/repositories/: capture_repo.rs  config_repo.rs  mod.rs  schedule_repo.rs  target_repo.rs  user_agent_repo.rs
crates/tor-capture-web/: Cargo.toml
crates/tor-capture-web/src/: lib.rs  state.rs  templates.rs
crates/tor-capture-web/src/routes/: api.rs  captures.rs  dashboard.rs  mod.rs  schedules.rs  settings.rs  targets.rs
src/: main.rs
static/css/: styles.css
static/js/: app.js
