[package]
name = "tor-capture-gdrive"
version.workspace = true
edition.workspace = true

[dependencies]
tor-capture-core.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
ring.workspace = true
base64.workspace = true
reqwest.workspace = true
url.workspace = true
async-trait = "0.1"
