[package]
name = "tor-capture-network"
version.workspace = true
edition.workspace = true

[dependencies]
tor-capture-core.workspace = true
arti-client.workspace = true
tor-rtcompat.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
url.workspace = true
serde_json.workspace = true
