[package]
name = "tor-capture-scheduler"
version.workspace = true
edition.workspace = true

[dependencies]
tor-capture-core.workspace = true
tor-capture-storage.workspace = true
tokio-cron-scheduler.workspace = true
croner.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
parking_lot.workspace = true
