[package]
name = "tor-capture-storage"
version.workspace = true
edition.workspace = true

[dependencies]
tor-capture-core.workspace = true
rusqlite.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
